# k8s-health-monitor

./: .gitignore  Dockerfile  README.md  Taskfile.yml  access-services.sh  process-compose.yaml  pyproject.toml
manifests/: argocd-app.yaml  deployment.yaml  gitea.yaml
src/k8s_health_monitor/: __init__.py  main.py  process_compose_manager.py  process_manager.py
