[project]
name = "k8s-health-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.120.4",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "kubernetes>=34.1.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
